test_scores/negative_dimers/features/Q05397.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q05397.pkl.xz